@@ -34,6 +34,7 @@
     * 4144 FIX: Sidebar: Bottom of last snapin was not 100% visible
     * 4145 FIX: Fixed exception when setting output_format in wrong case
     * 4220 FIX: WATO folder filter: improve output of unknown folders
+    * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints
 
     WATO:
     * 4142 New extended search dialog for rulesets and rules...
